# uav_server

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: plotjuggler_layout.xml  rviz.rviz  traj_0.txt
launch/: bagplay.launch  display.launch  seeker_all.launch  single_uav.launch  sph_experiment.launch  sph_experiment_ground_station.launch  uav_server.launch
script/: rosbridge_to_rosbridge.py
src/: asedasd.cpp  camera_pose_tf.cpp  record.cpp  uav_server.cpp
traj/: traj_0.txt
